--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etch-a-Sketch</title>
+    <link rel="stylesheet" href="style.css"/> 
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div id="container"></div>
+    <div class="grid-container" id="grid"></div> <!--create div and container class to hold the grid squares-->
 </body>
 </html>
