All requirements met and app is fully functioning.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <button id="size">Start</button>
+    <button id="reset">New Sketchpad</button>
     <div class="grid-container" id="grid"></div> <!--create div and container class to hold the grid squares-->
 </body>
 </html>
