Updated notes and README, cleanup, refactored createGrid.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <button id="reset">New Sketchpad</button>
-    <div class="grid-container" id="grid"></div> <!--create div and container class to hold the grid squares-->
+    <div class="grid-container" id="grid"></div>
 </body>
 </html>
