Added minimal basic CSS layout and styling - MVP complete.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <h1>Etch-a-Sketch</h1>
     <button id="reset">New Sketchpad</button>
     <div class="grid-container" id="grid"></div>
 </body>
